# fast-api-tutorial

./: .gitignore  README.md  pyproject.toml  script.py
src/: main.py
